@@ -1050,6 +1050,11 @@ class UtilTestCase(unittest.TestCase):
         wi = WhereIs('xxx.exe', string.join(pathdirs_1243, os.pathsep))
         assert wi == test.workpath(sub4_xxx_exe), wi
 
+        wi = WhereIs('xxx.exe',reject = sub3_xxx_exe)
+        assert wi == test.workpath(sub4_xxx_exe), wi
+        wi = WhereIs('xxx.exe', pathdirs_1243, reject = sub3_xxx_exe)
+        assert wi == test.workpath(sub4_xxx_exe), wi
+
         os.environ['PATH'] = string.join(pathdirs_1243, os.pathsep)
         wi = WhereIs('xxx.exe')
         assert wi == test.workpath(sub4_xxx_exe), wi
